# inkwave.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  checksum_brute.py  pyproject.toml  setup.cfg
.reuse/: dep5
LICENSES/: Unlicense.md
inkwave/: __init__.py  __main__.py
inkwave/kaitai/: eink_wbf.py  eink_wbf_wav_addrs_collection.py
patches/: header_fix.patch  update.sh  waveform_debug.patch
tests/: compare.sh  convert.sh
