[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "inkwave"
authors = [{name = "KOLANICH"}]
description = "A python port of inkwave"
readme = "ReadMe.md"
keywords = ["wbf", "wrf", "waveform", "eink", "e-ink", "epd", "epdx", "inkwave"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.4"
dependencies = ["plumbum"] # @ https://github.com/tomerfiliba/plumbum
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-tools/inkwave.py"

[project.scripts]
inkwave = "inkwave.__main__:MainCLI.run"

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]


[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."eink_wbf"]
update = true
search = false
localPath = "kaitai_struct_formats" # rel to pyproject.toml dir
outputDir = "inkwave/kaitai" # rel to localPath
#inputDir = "hardware"

[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."eink_wbf".formats.eink_wbf]
path = "hardware/eink_wbf.ksy"

# cannot import this one, because of https://github.com/kaitai-io/kaitai_struct/issues/295
# fortunately it works fine as an opaque
[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."eink_wbf".formats.bcd]
path = "common/bcd.ksy"

[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."eink_wbf".formats.eink_wbf.postprocess]
fixEnums = []
applyPatches = ["patches/waveform_debug.patch"]
