[metadata]
name = inkwave
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH-tools/inkwave.py
description = A python port of inkwave
long_description = file: ReadMe.md
keywords = wbf, wrf, waveform, eink, e-ink, epd, epdx, inkwave
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved
	License :: OSI Approved :: GNU General Public License v2 (GPLv2)
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
install_requires =
	plumbum # @ https://github.com/tomerfiliba/plumbum

setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3

[options.entry_points]
console_scripts = inkwave = inkwave.__main__:MainCLI.run
